--- a/public/book-1.6/persistent.html
+++ b/public/book-1.6/persistent.html
@@ -58,7 +58,10 @@ Persistent on its own.</p>
 <section id="persistent_synopsis">
 <h1>Synopsis</h1>
 <p>The required dependencies for the below are: persistent, persistent-sqlite and persistent-template.</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -329,7 +332,10 @@ filter, the types of the filtering value match the field. There’s another
 associated newtype for the database primary key of this entity.</p>
 <p>We can use the generated <code>Person</code> type like any other Haskell type, and then
 pass it off to other Persistent functions.</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -338,11 +344,6 @@ pass it off to other Persistent functions.</p>
 {-# LANGUAGE QuasiQuotes                #-}
 {-# LANGUAGE TemplateHaskell            #-}
 {-# LANGUAGE TypeFamilies               #-}
-{-# LANGUAGE DerivingStrategies         #-}
-{-# LANGUAGE StandaloneDeriving         #-}
-{-# LANGUAGE FlexibleInstances          #-}
-{-# LANGUAGE UndecidableInstances       #-}
-{-# LANGUAGE DataKinds                  #-}
 
 import           Control.Monad.IO.Class  (liftIO)
 import           Database.Persist
@@ -354,7 +355,7 @@ import           Control.Monad.Reader
 import           Control.Monad.Logger
 import           Conduit
 
-share [mkPersist sqlSettings, mkEntityDefList &quot;entityDefs&quot;] [persistLowerCase|
+share [mkPersist sqlSettings, mkMigrate &quot;migrateAll&quot;] [persistLowerCase|
 Person
     name String
     age Int Maybe
@@ -441,7 +442,10 @@ an error message about a missing table.</p>
 <p>For SQL databases, one of the major pains can be managing schema changes.
 Instead of leaving this to the user, Persistent steps in to help, but you have
 to <em>ask</em> it to help. Let’s see what this looks like:</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -450,11 +454,6 @@ to <em>ask</em> it to help. Let’s see what this looks like:</p>
 {-# LANGUAGE QuasiQuotes                #-}
 {-# LANGUAGE TemplateHaskell            #-}
 {-# LANGUAGE TypeFamilies               #-}
-{-# LANGUAGE DerivingStrategies         #-}
-{-# LANGUAGE StandaloneDeriving         #-}
-{-# LANGUAGE FlexibleInstances          #-}
-{-# LANGUAGE UndecidableInstances       #-}
-{-# LANGUAGE DataKinds                  #-}
 
 import           Control.Monad.IO.Class  (liftIO)
 import           Database.Persist
@@ -466,7 +465,7 @@ import           Control.Monad.Reader
 import           Control.Monad.Logger
 import           Conduit
 
-share [mkPersist sqlSettings, mkEntityDefList &quot;entityDefs&quot;] [persistLowerCase|
+share [mkPersist sqlSettings, mkMigrate &quot;migrateAll&quot;] [persistLowerCase|
 Person
     name String
     age Int Maybe
@@ -490,7 +489,10 @@ review and testing that should take place before production deployments.</p></as
 <p>This works when dealing with just a few entities, but can quickly get tiresome
 once we are dealing with a dozen entities. Instead of repeating yourself,
 Persistent provides a helper function, <code>mkMigrate</code>:</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -593,7 +595,10 @@ unique.</p>
 <p>While each field name must begin with a lowercase letter, the uniqueness
 constraints must begin with an uppercase letter, since it will be represented
 in Haskell as a data constructor.</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -712,8 +717,7 @@ registered email address. For this, you need one of the select functions.</p>
 <td align="left" valign="top"><p>A <code>Source</code> containing all the IDs and values from the database. This allows you to write streaming code.</p>
 <p>NOTE: A <code>Source</code> is a stream of data, and is part of the <code>conduit</code> package. I
 recommend reading the
-<a href="https://www.fpcomplete.com/user/snoyberg/library-documentation/conduit-overview">School
-of Haskell conduit tutorial</a> to get started.</p></td>
+<a href="https://github.com/snoyberg/conduit">Official Conduit tutorial</a> to get started.</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p>selectList</p></td>
@@ -966,7 +970,10 @@ two words on a line.</p>
 <p>Suppose we want to have a <code>Person</code> entity with an (optional) age and the
 timestamp of when he/she was added to the system. For entities already in the
 database, we want to just use the current date-time for that timestamp.</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -1003,7 +1010,10 @@ nullable.</p>
 understood by the database. In this case, it uses the database’s built-in
 <code>CURRENT_TIME</code> function. Suppose that we now want to add a field for a person’s
 favorite programming language:</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -1036,7 +1046,10 @@ database schema and automatic migrations.</p></aside>
 properly interpret it. Finally, Persistent can use double quotes for containing
 white space, so if we want to set someone’s default home country to be El
 Salvador:</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -1083,7 +1096,10 @@ up-to-date list is maintained
 <p>Persistent allows references between your data types in a manner that is
 consistent with supporting non-SQL databases. We do this by embedding an ID in
 the related entity. So if a person has many cars:</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -1122,7 +1138,10 @@ many-to-many relationships, we need a join entity, which has a one-to-many
 relationship with each of the original tables. It is also a good idea to use
 uniqueness constraints on these. For example, to model a situation where we
 want to track which people have shopped in which stores:</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -1216,7 +1235,7 @@ Post
 <p>We know that <code>BlogId</code> is just a type synonym for <code>Key Blog</code>, but how will <code>Key
 Blog</code> be defined? We can’t use an <code>Int64</code>, since that won’t work for MongoDB.
 And we can’t use <code>ByteString</code>, since that won’t work for SQL databases.</p>
-<p>To allow for this, once <code>mpsGeneric</code> is set to <code>True</code>, out resulting datatypes have a type parameter to indicate the database backend they use, so that keys can be properly encoded. This looks like:</p>
+<p>To allow for this, once <code>mpsGeneric</code> is set to <code>True</code>, our resulting datatypes have a type parameter to indicate the database backend they use, so that keys can be properly encoded. This looks like:</p>
 <pre language="haskell" linenumbering="unnumbered"><code class="haskell">data BlogGeneric backend = Blog { blogTitle :: Text }
 data PostGeneric backend = Post
     { postTitle  :: Text
@@ -1253,7 +1272,10 @@ import Database.Persist.TH
 data Employment = Employed | Unemployed | Retired
     deriving (Show, Read, Eq)
 derivePersistField &quot;Employment&quot;</code></pre>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -1302,7 +1324,10 @@ interface exclusively.)</p>
 <aside class="note"><p>Actually, you <em>can</em> express a LIKE operator directly in the normal syntax
 due to a feature added in Persistent 0.6, which allows backend-specific
 operators. But this is still a good example, so let’s roll with it.</p></aside>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -1349,7 +1374,10 @@ here to point out how it works under the surface.</p>
 <p>The yesod-persistent package provides the meeting point between Persistent and
 Yesod. It provides the <code>YesodPersist</code> typeclass, which standardizes access to
 the database via the <code>runDB</code> method. Let’s see this in action.</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
@@ -1456,7 +1484,10 @@ Persistent knowledge should transfer over easily.</p>
 <section id="persistent_something_besides_sqlite">
 <h1>Something besides SQLite</h1>
 <p>To keep the examples in this chapter simple, we’ve used the SQLite backend. Just to round things out, here’s our original synopsis rewritten to work with PostgreSQL:</p>
-<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE EmptyDataDecls             #-}
+<pre language="haskell" linenumbering="unnumbered"><code class="haskell active">{-# LANGUAGE DerivingStrategies         #-}
+{-# LANGUAGE UndecidableInstances       #-}
+{-# LANGUAGE DataKinds                  #-}
+{-# LANGUAGE EmptyDataDecls             #-}
 {-# LANGUAGE FlexibleContexts           #-}
 {-# LANGUAGE GADTs                      #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
