--- a/public/book/deploying-your-webapp.html
+++ b/public/book/deploying-your-webapp.html
@@ -33,7 +33,7 @@ Edit the <code>config/keter.yaml</code> file in your scaffolded application as n
 </li>
 <li>
 <p>
-Set up some kind of server for hosting yours apps. I recommend trying Ubuntu on Amazon EC2.
+Set up some kind of server for hosting your apps. I recommend trying Ubuntu on Amazon EC2.
 </p>
 </li>
 <li>
@@ -244,7 +244,7 @@ behind it instead.</p>
 <p>Keter configuration is trivial, since it is designed to work with Yesod
 applications. But if you want to instead use Nginx, how do you set it up?</p>
 <p>In general, Nginx will listen on port 80 and your Yesod/Warp app will listen on
-some unprivileged port (lets say 4321). You will then need to provide a
+some unprivileged port (let’s say 4321). You will then need to provide a
 nginx.conf file, such as:</p>
 <pre>daemon off; # Don&#39;t run nginx in the background, good for monitoring apps
 events {
